fix header padding on tablet

--- a/src/styles.css
+++ b/src/styles.css
@@ -227,6 +227,14 @@ header {
   }
 }
 
+@media only screen and (min-width: 48rem) {
+  header {
+    padding: 0 calc(var(--page-padding) + 1.76px);
+    .container {
+      padding: 1.5rem 0;
+    }
+  }
+}
 /* ******************* */
 /*         HERO        */
 /* ******************* */
